Fix intro div overlapping GitHub buttons

--- a/css/docs.css
+++ b/css/docs.css
@@ -138,6 +138,7 @@ ul.nav-components li a {
 
 .docs-jumbo {
   height: 500px;
+  padding-bottom: 40px;
 }
 
 .docs-header-subtitle {
